--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/EmmanuelBeziat/emmanuelbeziat-rss#readme",
   "dependencies": {
+    "dayjs": "^1.10.4",
     "dotenv": "^8.2.0",
     "jstoxml": "^2.0.3",
     "meta-marked": "^0.5.0"
