--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "📰 RSS file creation on push hooks? Yeah!",
   "main": "src/index.js",
   "scripts": {
-    "start": "node -r dotenv/config src/index.js"
+    "start": "node -r dotenv/config src/index.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,19 @@
   "dependencies": {
     "dayjs": "^1.11.1",
     "dotenv": "^16.0.0",
-    "jstoxml": "^3.2.3",
+    "jstoxml": "^5.0.1",
     "meta-marked": "^0.5.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
+  },
+  "jest": {
+		"verbose": true,
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
