--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node -r dotenv/config src/index.js",
+		"setup": "node setup.js",
     "test": "jest"
   },
   "repository": {
