--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node -r dotenv/config src/index.js",
-		"setup": "npm i && node setup.js",
-    "test": "jest"
+    "setup": "npm i && node setup.js",
+    "test": "cross-env NODE_ENV=test node -r dotenv/config node_modules/jest/bin/jest.js",
+    "test:env": "cross-env NODE_ENV=test node -r dotenv/config node_modules/jest/bin/jest.js tests/Environment.test.js",
+    "test:classes": "cross-env NODE_ENV=test node -r dotenv/config node_modules/jest/bin/jest.js tests/Classes.test.js"
   },
   "repository": {
     "type": "git",
@@ -36,12 +38,7 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
     "babel-jest": "^29.7.0",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0"
-  },
-  "jest": {
-    "verbose": true,
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    }
   }
 }
