--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "start": "node -r dotenv/config src/index.js",
     "setup": "npm i && node setup.js",
-    "test": "cross-env NODE_ENV=test node -r dotenv/config node_modules/jest/bin/jest.js",
-    "test:env": "cross-env NODE_ENV=test node -r dotenv/config node_modules/jest/bin/jest.js tests/Environment.test.js",
-    "test:classes": "cross-env NODE_ENV=test node -r dotenv/config node_modules/jest/bin/jest.js tests/Classes.test.js"
+    "test": "vitest --run"
   },
   "repository": {
     "type": "git",
@@ -39,6 +37,6 @@
     "@babel/preset-env": "^7.26.0",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0"
+    "vitest": "^2.1.4"
   }
 }
