--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "emmanuelbeziat-rss",
-  "version": "1.0.3",
+  "version": "1.2.0",
   "type": "module",
   "description": "📰 RSS file creation on push hooks? Yeah!",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node -r dotenv/config src/index.js",
+    "start": "node -r dotenv/config src/index.ts",
     "setup": "npm i && node setup.js",
     "lint": "npx eslint src --ext .vue,.js,.jsx,.cjs,.mjs",
     "test": "vitest --run",
@@ -36,8 +36,8 @@
   "dependencies": {
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "jstoxml": "^7.0.1",
-    "meta-marked": "^0.5.0"
+    "gray-matter": "^4.0.3",
+    "jstoxml": "^7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
@@ -47,6 +47,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
+    "husky": "^9.1.7",
+    "inquirer": "^12.6.0",
     "lint-staged": "^15.5.2",
     "vitest": "^3.1.3"
   }
